--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button id='btnEmpezar' class="button-start" onclick="empezarJuego()">Empezar juego!</button>
         </section>
         <section class="score-container">
-            <p>Score: <span id="score"></span></p>
+            <p>Score: <span id="score">0</span></p>
         </section>
     </main>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
