--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <section class="score-container">
             <p>Score: <span id="score">0</span></p>
         </section>
+        <section>
+            <audio src="./assets/lose.wav" id="audio_mario"></audio>
+            <audio src="./assets/mario-coin.wav" id="audio_correct"></audio>
+            <audio src="./assets/candy-crush-bomba-color.wav" id="iluminar_color"></audio>
+            <audio src="./assets/victory.wav" id="victory"></audio>
+        </section>
     </main>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="app.js"></script>
